objects/Case.object
<CustomObject>
    <fields>
        <fullName>Machine_Down_When_Collector_Arrived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Machine Down When Collector Arrived?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Asset.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Service_Appt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Service Appt</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Cases (Most Recent Service Appt)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Dispatch__c</fullName>
        <inlineHelpText>This field is used a reminder for when the case needs to be dispatched</inlineHelpText>
        <label>Next Dispatch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Pay_Reason__c</fullName>
        <label>No Pay Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expired Voucher</fullName>
                </value>
                <value>
                    <fullName>Gameplay Malfunction, Voids All Pay and Play</fullName>
                </value>
                <value>
                    <fullName>Insufficient Information</fullName>
                </value>
                <value>
                    <fullName>No Corresponding Variance Found Upon Audit</fullName>
                </value>
                <value>
                    <fullName>No Error Found</fullName>
                </value>
                <value>
                    <fullName>Player Error</fullName>
                </value>
                <value>
                    <fullName>Voucher Redeemed for Completed Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Originally_Called_In_By_Collectors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Originally Called In By Collectors?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parts_On_Order_Chatter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parts On Order Chatter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parts_Status__c</fullName>
        <label>Parts Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Ready for pickup</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Back Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payable_to_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payable to Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhoneFacility__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pickup_Location__c</fullName>
        <label>Pickup Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pickup_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriorityLookup__c</fullName>
        <formula>TEXT(Account.Priority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Requested</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Needed__c</fullName>
        <label>Quantity Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Return_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RMA Return Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA #</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Requesting_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM Requesting Project</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (RM Requesting Project)</relationshipLabel>
        <relationshipName>Cases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT_Status__c</fullName>
        <label>RT Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT__c</fullName>
        <label>RT#</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Solution_Manager__c</fullName>
        <inlineHelpText>Indicates why the case was assigned to a Solution Manager</inlineHelpText>
        <label>Reason for Solution Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location Closed</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Case created in error</fullName>
                </value>
                <value>
                    <fullName>Cannot resolve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_Meter__c</fullName>
        <label>Redemption Meter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remotely_Resolved_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the Case was remotely resolved</description>
        <label>Remotely Resolved Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Reason__c</fullName>
        <label>Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue Optimization</fullName>
                </value>
                <value>
                    <fullName>Contract extension</fullName>
                </value>
                <value>
                    <fullName>Gameset update</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additions</fullName>
                </value>
                <value>
                    <fullName>Removals</fullName>
                </value>
                <value>
                    <fullName>Swaps</fullName>
                </value>
                <value>
                    <fullName>Complete Removal</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Software Upgrades</fullName>
                </value>
                <value>
                    <fullName>SW Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolve_Day_Hours_Open__c</fullName>
        <description>The number of business hours (total) that a location is open on the date the case is closed.</description>
        <label>Resolve Day Hours Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Pay</fullName>
                </value>
                <value>
                    <fullName>Location Pay</fullName>
                </value>
                <value>
                    <fullName>No Pay</fullName>
                </value>
                <value>
                    <fullName>One Time Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGI_Status_AddSwap__c</fullName>
        <label>SGI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Submission</fullName>
                    <default>true</default>
                    <label>Pending Submission</label>
                </value>
                <value>
                    <fullName>Submitted to SGI</fullName>
                </value>
                <value>
                    <fullName>SGI Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGI_Status__c</fullName>
        <label>SGI Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <formula>Asset.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Priority__c</fullName>
        <description>Populates on Service Appointment to determine Priority. Can be overridden on Service Appointment.</description>
        <formula>IF((Account_Priority_Value__c + Service_Category_Priority_Value__c)&gt;10,10,IF((Account_Priority_Value__c + Service_Category_Priority_Value__c)&lt;0,0,(Account_Priority_Value__c + Service_Category_Priority_Value__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates on Service Appointment to determine Priority.</inlineHelpText>
        <label>Service Appointment Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Category_Priority_Value__c</fullName>
        <description>Converts the Service Category into a numbered priority that contributes to the overall Service Appointment Priority Values used in Field Service.</description>
        <formula>If(Ispickval(Service_Category__c, &quot;All Games Down&quot;),0,
If(Ispickval(Service_Category__c ,&quot;RT (No Backup RT)&quot;),0.5,
If(Ispickval(Service_Category__c ,&quot;RT (Backup RT Available)&quot;) || Ispickval(Service_Category__c ,&quot;VGT&quot;) || Ispickval(Service_Category__c,&quot;Multiple VGTs&quot;),2,
IF(Ispickval(Service_Category__c , &quot;Standalone ATM&quot;) || Ispickval(Service_Category__c ,&quot;Jukebox&quot;), 4.5,
IF(Ispickval(Service_Category__c, &quot;COAM&quot;),5,
IF(Ispickval(Service_Category__c , &quot;Amusement&quot;) || Ispickval(Service_Category__c , &quot;Other&quot;),6,
IF(Ispickval(Service_Category__c , &quot;Wellness&quot;),7,0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts the Service Category into a numbered priority that contributes to the overall Service Appointment Priority Values used in Field Service.</inlineHelpText>
        <label>Service Category Priority Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Games Down</fullName>
                </value>
                <value>
                    <fullName>Amusement</fullName>
                </value>
                <value>
                    <fullName>COAM</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                    <label>Customer Complaint / Ticket Issue</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Multiple VGTs</fullName>
                </value>
                <value>
                    <fullName>RT (Backup RT Available)</fullName>
                </value>
                <value>
                    <fullName>RT (No Backup RT)</fullName>
                </value>
                <value>
                    <fullName>Standalone ATM</fullName>
                </value>
                <value>
                    <fullName>VGT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Jukebox</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                    <isActive>false</isActive>
                    <label>Maintenance</label>
                </value>
                <value>
                    <fullName>RT</fullName>
                    <isActive>false</isActive>
                    <label>RT</label>
                </value>
                <value>
                    <fullName>RT / Customer</fullName>
                    <isActive>false</isActive>
                    <label>RT / Customer</label>
                </value>
                <value>
                    <fullName>SGI</fullName>
                    <isActive>false</isActive>
                    <label>SGI</label>
                </value>
                <value>
                    <fullName>Service Category</fullName>
                    <isActive>false</isActive>
                    <label>Service Category</label>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                    <isActive>false</isActive>
                    <label>Tablet</label>
                </value>
                <value>
                    <fullName>UpShow</fullName>
                    <isActive>false</isActive>
                    <label>UpShow</label>
                </value>
                <value>
                    <fullName>Upgrade Appointment</fullName>
                    <isActive>false</isActive>
                    <label>Upgrade Appointment</label>
                </value>
                <value>
                    <fullName>VGT / RT</fullName>
                    <isActive>false</isActive>
                    <label>VGT / RT</label>
                </value>
                <value>
                    <fullName>VGT / RT / Amusement</fullName>
                    <isActive>false</isActive>
                    <label>VGT / RT / Amusement</label>
                </value>
                <value>
                    <fullName>VGT / SGI</fullName>
                    <isActive>false</isActive>
                    <label>VGT / SGI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Partner_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to show if a Service Partner Operator is assigned to the case</description>
        <inlineHelpText>Service Partner Operator is who is handling the Case</inlineHelpText>
        <label>Service Partner Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Service Partner Operator)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <formula>TEXT(Account.Service_Region__c)</formula>
        <label>Service Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <formula>Account.Service_Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Which Service Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Set_Status_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Status Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shuttle</fullName>
                </value>
                <value>
                    <fullName>Fedex Ground</fullName>
                </value>
                <value>
                    <fullName>Fedex Express</fullName>
                </value>
                <value>
                    <fullName>Local Pickup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Record__c</fullName>
        <formula>&quot;/lightning/r/&quot;&amp;Id&amp;&quot;/view&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Upgrade_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Software Upgrade Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjusted part</fullName>
                </value>
                <value>
                    <fullName>Adjusted volume</fullName>
                </value>
                <value>
                    <fullName>Assessed the damages and reported information to superiors</fullName>
                </value>
                <value>
                    <fullName>ATM feature not enabled</fullName>
                </value>
                <value>
                    <fullName>Cash drawer refill process</fullName>
                </value>
                <value>
                    <fullName>Changed cash can / reject bin</fullName>
                </value>
                <value>
                    <fullName>Changed comm port</fullName>
                </value>
                <value>
                    <fullName>Cleaned part</fullName>
                </value>
                <value>
                    <fullName>Cleared cmos</fullName>
                </value>
                <value>
                    <fullName>Cleared jam</fullName>
                </value>
                <value>
                    <fullName>Cleared pending transaction</fullName>
                </value>
                <value>
                    <fullName>Delivered amusement equipment</fullName>
                </value>
                <value>
                    <fullName>Delivered hand pay bag</fullName>
                </value>
                <value>
                    <fullName>Enabled payout parameter</fullName>
                </value>
                <value>
                    <fullName>Enabled validation code manually</fullName>
                </value>
                <value>
                    <fullName>Exited game</fullName>
                </value>
                <value>
                    <fullName>Flashed bill acceptor</fullName>
                </value>
                <value>
                    <fullName>Informed location rm of issue</fullName>
                </value>
                <value>
                    <fullName>Installed nrt patch</fullName>
                </value>
                <value>
                    <fullName>Issued facility pay form</fullName>
                </value>
                <value>
                    <fullName>Issue resolved itself</fullName>
                </value>
                <value>
                    <fullName>Liquor license not in effect</fullName>
                </value>
                <value>
                    <fullName>Machine pending agent appt</fullName>
                </value>
                <value>
                    <fullName>Mass outage</fullName>
                </value>
                <value>
                    <fullName>Move amusement equipment</fullName>
                </value>
                <value>
                    <fullName>No issue</fullName>
                </value>
                <value>
                    <fullName>Open &amp; closed all doors</fullName>
                </value>
                <value>
                    <fullName>Powered machine up</fullName>
                </value>
                <value>
                    <fullName>Provided login info to location</fullName>
                </value>
                <value>
                    <fullName>Provided rm info to location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_AddSwapRequest__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Regional Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Compliance Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending Executive Approval</fullName>
                    <isActive>false</isActive>
                    <label>Pending Executive Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_PartsRequest__c</fullName>
        <label>Parts Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending: Order Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending: Back-ordered</fullName>
                </value>
                <value>
                    <fullName>Ready for pick-up</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Swap_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swap Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Notes__c</fullName>
        <label>Tech Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <description>test</description>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Three_Month_Average_HPD__c</fullName>
        <description>To pull Three Month Average HPD from account into list views and reports</description>
        <formula>Account.Three_Month_Average_HPD__c</formula>
        <label>Three Month Average HPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dark_Time__c</fullName>
        <formula>if(or((isblank(Case_Create_BH_Open_Time__c)),isblank(Case_Resolved_BH_Open_Time__c)),(ClosedDate-CreatedDate),
/*for cases where the Business Hours have not been updated by the RM*/


IF(DATEVALUE(ClosedDate)= DATEVALUE(CreatedDate) , 
(ClosedDate-CreatedDate ), 
/*For cases created/closed same day*/

IF(AND(DATEVALUE(ClosedDate)&lt;&gt; DATEVALUE(CreatedDate),(ClosedDate-CreatedDate&lt;1)), 
(ClosedDate - CreatedDate), 
/*For cases closed the next business day that are still less than 1 business day old*/ 

IF(AND((ClosedDate- CreatedDate)&gt;=3, 
Date_Time_Closed_Hour__c&gt;=hour(timevalue(Case_Resolved_BH_Open_Time__c))), 
((((Created_Day_Hours_Open__c-((Date_Time_Opened_Hour__c)-hour(timevalue( Case_Create_BH_Open_Time__c ))))/Created_Day_Hours_Open__c) 
+ 
(((Date_Time_Closed_Hour__c)-hour(timevalue( Case_Resolved_BH_Open_Time__c )))/ Resolve_Day_Hours_Open__c )) 
+(ClosedDate-CreatedDate)-1 ), 
/*This is for cases whose resolution spans more than 3 days AND who received a resolution within normal business hours*/ 

IF(AND((ClosedDate- CreatedDate)&gt;=3,Date_Time_Closed_Hour__c&lt;hour(timevalue(Case_Resolved_BH_Open_Time__c))), 
((((Created_Day_Hours_Open__c-((Date_Time_Opened_Hour__c)-hour(timevalue( Case_Create_BH_Open_Time__c ))))/Created_Day_Hours_Open__c) 
+ FLOOR(ClosedDate-CreatedDate) )), 
/*This is for cases whose resolution spans more than 3 days AND who received a resolution outside of normal business hours*/ 

IF(AND((ClosedDate- CreatedDate)&gt;1, 
(ClosedDate-CreatedDate)&lt;2,Date_Time_Closed_Hour__c&gt;=hour(timevalue(Case_Resolved_BH_Open_Time__c))), 
((((Created_Day_Hours_Open__c-((Date_Time_Opened_Hour__c)-hour(timevalue( Case_Create_BH_Open_Time__c ))))/Created_Day_Hours_Open__c) 
+ 
(((Date_Time_Closed_Hour__c)-hour(timevalue( Case_Resolved_BH_Open_Time__c )))/ Resolve_Day_Hours_Open__c )) 
), 
/*This is for cases that span from 1 to 2 business days, wherein the case closed hour was within the normal business hours of that day*/ 

IF(AND((ClosedDate- CreatedDate)&gt;1, 
(ClosedDate-CreatedDate)&lt;2,Date_Time_Closed_Hour__c&lt;hour(timevalue(Case_Resolved_BH_Open_Time__c))), 
((((Created_Day_Hours_Open__c-((Date_Time_Opened_Hour__c)-hour(timevalue( Case_Create_BH_Open_Time__c ))))/Created_Day_Hours_Open__c) )), 
/*This is for cases that span from 1 to 2 business days, wherein the case closed hour is prior to the business opening, and therefore should be a zero value for the close day dark time*/ 

IF(AND((ClosedDate- CreatedDate)&gt;=2, 
(ClosedDate-CreatedDate)&lt;3,Date_Time_Closed_Hour__c&gt;=hour(timevalue(Case_Resolved_BH_Open_Time__c))), 
((((Created_Day_Hours_Open__c-((Date_Time_Opened_Hour__c)-hour(timevalue( Case_Create_BH_Open_Time__c ))))/Created_Day_Hours_Open__c) 
+2 )), 
/*This is for cases older than 2 but less than 3 business days, wherein the case closed hour was within the normal business hours of that day*/ 

IF(AND((ClosedDate- CreatedDate)&gt;=2, 
(ClosedDate-CreatedDate)&lt;3,Date_Time_Closed_Hour__c&lt;hour(timevalue(Case_Resolved_BH_Open_Time__c))), 
((((Created_Day_Hours_Open__c-((Date_Time_Opened_Hour__c)-hour(timevalue( Case_Create_BH_Open_Time__c ))))/Created_Day_Hours_Open__c) 
+ 2 )), 
/*This is for cases older than 2 but less than 3 business days, wherein the case closed hour is prior to the business opening, and therefore should be a zero value for the close day dark time*/ 

(ClosedDate-CreatedDate))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dark Time (in Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Removals__c</fullName>
        <label>Total Removals</label>
        <summaryFilterItems>
            <field>Case_Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Remove</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Line_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Time_Down__c</fullName>
        <formula>ClosedDate - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time Down</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_if_applicable_text__c</fullName>
        <label>Tracking # (if applicable)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>